--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=research-engine
-spring.web.resources.static-locations=file:///Users/elzabababu/Projects/Data/citeseer2/
 docs.path=/Users/elzabababu/Projects/Data/citeseer2
 index.path=/Users/elzabababu/Projects/Data/citeseer2_index
+dblp.path=/Users/elzabababu/Projects/Data/dblp.xml
