Refactored APIs for Lucene Index, Semantic Search Index and Dataset Creation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=research-engine
 index.path=/Users/elzabababu/Projects/Data/index
+dataset.path=./dataset/cs_research_papers.json
 faiss.api.url=http://127.0.0.1:8000
