--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=research-engine
 index.path=/Users/elzabababu/Projects/Data/index
 dataset.path=./dataset/cs_research_papers.json
+cluster.path=./NLP/document_clusters.json
 faiss.api.url=http://127.0.0.1:8000
