Near Duplicate Detection and Terminology Extraction - Implemented

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.application.name=research-engine
 index.path=/Users/elzabababu/Projects/Data/index
 dataset.path=./dataset/cs_research_papers.json
 cluster.path=./NLP/document_clusters.json
+corpus.file.path=./dataset/brown_corpus.txt
 faiss.api.url=http://127.0.0.1:8000
